--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     margin: 0;
 }
 
+@-ms-viewport {
+    width: device-width;
+  }
+
 body {
     background-color: #d9dcd6;
 }
@@ -28,12 +32,13 @@ ul {
     list-style-type: none;
 }
 
-#links {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    float: right;
 }
 
 li {
@@ -42,7 +47,12 @@ li {
 }
 
 a {
-    color: #ffffff
+    color: #ffffff;
+    padding: 10px;
+}
+
+a:hover {
+    color: blue
 }
 
 #hero {
@@ -76,11 +86,35 @@ a {
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    opacity: 0.2;
+}
+
+#search-engine-optimization:hover {
+    opacity: 1;
+}
+
+#online-reputation-management:hover {
+    opacity: 1;
+}
+
+#social-media-marketing:hover {
+    opacity: 1;
 }
 
 .services h2 {
     margin-bottom: 20px;
     font-size: 36px;
+}
+
+.right-link {
+    position: relative;
+    top: 80px;
+    left: 575px;
+}
+
+#online-reputation-management a {
+    position: relative;
+    top: 60px;
 }
 
 .benefits {
